# redbase

./: .gitignore  CMakeLists.txt  README.md  config.json  test  testc.cpp
include/: btree_node.h  config.h  configloader.h  initLib.h  ix.h  ix_indexhandle.h  ix_manager.h  pf.h  pf_algomgr.h  pf_buffermgr.h  pf_filehandle.h  pf_internal.h  pf_manager.h  pf_pagehandle.h  predicate.h  redbase.h  rm.h  rm_filehandle.h  rm_filescan.h  rm_manager.h  rm_record.h  rm_rid.h
include/datalib/: propertyTable.h  relationTable.h
include/nlohmann/: json.hpp
src/: btree_node.cpp  configloader.cpp  initLib.cpp  ix_indexhandle.cpp  ix_manager.cpp  pf_algomgr.cpp  pf_buffermgr.cpp  pf_filehandle.cpp  pf_manager.cpp  pf_pagehandle.cpp  predicate.cpp  redbase.cpp  rm_filehandle.cpp  rm_filescan.cpp  rm_manager.cpp  rm_record.cpp  rm_rid.cpp  test.txt
test/: CMakeLists.txt  ix_test.cpp  rm_test.cpp  test.cpp
